@@ -290,6 +290,7 @@ ${File} "..\..\" "pixbuf.dll"
 ${File} "..\..\" "pstricks.dll"
 ${File} "..\..\" "sadt.dll"
 ${File} "..\..\" "shape.dll"
+${File} "..\..\" "sissi.dll"
 ${File} "..\..\" "standard.dll"
 ${File} "..\..\" "svg.dll"
 ${File} "..\..\" "uml.dll"
@@ -2091,6 +2092,7 @@ ${File} "..\..\sheets\" "network.sheet"
 ${File} "..\..\sheets\" "Pneumatic.sheet"
 ${File} "..\..\sheets\" "SADT.sheet"
 ${File} "..\..\sheets\" "SDL.sheet"
+${File} "..\..\sheets\" "SISSI.sheet"
 ${File} "..\..\sheets\" "sybase.sheet"
 ${File} "..\..\sheets\" "UML.sheet"
 ${SetOutPath} "$INSTDIR\sheets\ER"
@@ -2174,6 +2176,138 @@ ${File} "..\..\sheets\KAOS\" "responsibility.png"
 ${File} "..\..\sheets\KAOS\" "responsibility.xpm"
 ${File} "..\..\sheets\KAOS\" "softgoal.png"
 ${File} "..\..\sheets\KAOS\" "softgoal.xpm"
+${SetOutPath} "$INSTDIR\sheets\SISSI"
+${File} "..\..\sheets\SISSI\" "1.xml"
+${File} "..\..\sheets\SISSI\" "10.xml"
+${File} "..\..\sheets\SISSI\" "11.xml"
+${File} "..\..\sheets\SISSI\" "12.xml"
+${File} "..\..\sheets\SISSI\" "13.xml"
+${File} "..\..\sheets\SISSI\" "14.xml"
+${File} "..\..\sheets\SISSI\" "15.xml"
+${File} "..\..\sheets\SISSI\" "16.xml"
+${File} "..\..\sheets\SISSI\" "17.xml"
+${File} "..\..\sheets\SISSI\" "18.xml"
+${File} "..\..\sheets\SISSI\" "19.xml"
+${File} "..\..\sheets\SISSI\" "2.xml"
+${File} "..\..\sheets\SISSI\" "20.xml"
+${File} "..\..\sheets\SISSI\" "21.xml"
+${File} "..\..\sheets\SISSI\" "22.xml"
+${File} "..\..\sheets\SISSI\" "23.xml"
+${File} "..\..\sheets\SISSI\" "28.xml"
+${File} "..\..\sheets\SISSI\" "29.xml"
+${File} "..\..\sheets\SISSI\" "3.xml"
+${File} "..\..\sheets\SISSI\" "30.xml"
+${File} "..\..\sheets\SISSI\" "31.xml"
+${File} "..\..\sheets\SISSI\" "32.xml"
+${File} "..\..\sheets\SISSI\" "33.xml"
+${File} "..\..\sheets\SISSI\" "34.xml"
+${File} "..\..\sheets\SISSI\" "35.xml"
+${File} "..\..\sheets\SISSI\" "36.xml"
+${File} "..\..\sheets\SISSI\" "37.xml"
+${File} "..\..\sheets\SISSI\" "38.xml"
+${File} "..\..\sheets\SISSI\" "39.xml"
+${File} "..\..\sheets\SISSI\" "4.xml"
+${File} "..\..\sheets\SISSI\" "40.xml"
+${File} "..\..\sheets\SISSI\" "41.xml"
+${File} "..\..\sheets\SISSI\" "42.xml"
+${File} "..\..\sheets\SISSI\" "43.xml"
+${File} "..\..\sheets\SISSI\" "44.xml"
+${File} "..\..\sheets\SISSI\" "45.xml"
+${File} "..\..\sheets\SISSI\" "46.xml"
+${File} "..\..\sheets\SISSI\" "47.xml"
+${File} "..\..\sheets\SISSI\" "48.xml"
+${File} "..\..\sheets\SISSI\" "5.xml"
+${File} "..\..\sheets\SISSI\" "50.xml"
+${File} "..\..\sheets\SISSI\" "51.xml"
+${File} "..\..\sheets\SISSI\" "52.xml"
+${File} "..\..\sheets\SISSI\" "53.xml"
+${File} "..\..\sheets\SISSI\" "54.xml"
+${File} "..\..\sheets\SISSI\" "55.xml"
+${File} "..\..\sheets\SISSI\" "56.xml"
+${File} "..\..\sheets\SISSI\" "57.xml"
+${File} "..\..\sheets\SISSI\" "58.xml"
+${File} "..\..\sheets\SISSI\" "59.xml"
+${File} "..\..\sheets\SISSI\" "6.xml"
+${File} "..\..\sheets\SISSI\" "60.xml"
+${File} "..\..\sheets\SISSI\" "61.xml"
+${File} "..\..\sheets\SISSI\" "62.xml"
+${File} "..\..\sheets\SISSI\" "63.xml"
+${File} "..\..\sheets\SISSI\" "7.xml"
+${File} "..\..\sheets\SISSI\" "70.xml"
+${File} "..\..\sheets\SISSI\" "71.xml"
+${File} "..\..\sheets\SISSI\" "75.xml"
+${File} "..\..\sheets\SISSI\" "76.xml"
+${File} "..\..\sheets\SISSI\" "8.xml"
+${File} "..\..\sheets\SISSI\" "9.xml"
+${File} "..\..\sheets\SISSI\" "aircooler.png"
+${File} "..\..\sheets\SISSI\" "alarm_center.png"
+${File} "..\..\sheets\SISSI\" "analyse.xpm"
+${File} "..\..\sheets\SISSI\" "barriere.png"
+${File} "..\..\sheets\SISSI\" "broken-chain.xpm"
+${File} "..\..\sheets\SISSI\" "broken.xpm"
+${File} "..\..\sheets\SISSI\" "camera_interphone.png"
+${File} "..\..\sheets\SISSI\" "capteur_brise_glace.png"
+${File} "..\..\sheets\SISSI\" "capteur_faisceau.png"
+${File} "..\..\sheets\SISSI\" "cellular_phone.png"
+${File} "..\..\sheets\SISSI\" "cloud.png"
+${File} "..\..\sheets\SISSI\" "condensateur.png"
+${File} "..\..\sheets\SISSI\" "detecteur_alimentation.png"
+${File} "..\..\sheets\SISSI\" "detecteur_courant.png"
+${File} "..\..\sheets\SISSI\" "detecteur_enthalpie.png"
+${File} "..\..\sheets\SISSI\" "detecteur_fumee.png"
+${File} "..\..\sheets\SISSI\" "detecteur_humidite.png"
+${File} "..\..\sheets\SISSI\" "detecteur_lumiere.png"
+${File} "..\..\sheets\SISSI\" "detecteur_mouvement.png"
+${File} "..\..\sheets\SISSI\" "detecteur_mouvement_video.png"
+${File} "..\..\sheets\SISSI\" "detecteur_niveau.png"
+${File} "..\..\sheets\SISSI\" "detecteur_pression.png"
+${File} "..\..\sheets\SISSI\" "detecteur_qualite_air.png"
+${File} "..\..\sheets\SISSI\" "detecteur_tension.png"
+${File} "..\..\sheets\SISSI\" "detecteur_vehicule.png"
+${File} "..\..\sheets\SISSI\" "detecteur_vibration.png"
+${File} "..\..\sheets\SISSI\" "digi_code.png"
+${File} "..\..\sheets\SISSI\" "diskette.png"
+${File} "..\..\sheets\SISSI\" "extincteur.png"
+${File} "..\..\sheets\SISSI\" "extracteur_humidite.png"
+${File} "..\..\sheets\SISSI\" "faraday.png"
+${File} "..\..\sheets\SISSI\" "file.png"
+${File} "..\..\sheets\SISSI\" "file_cabinet.png"
+${File} "..\..\sheets\SISSI\" "filtre_air.png"
+${File} "..\..\sheets\SISSI\" "hub.png"
+${File} "..\..\sheets\SISSI\" "ibm_mini.png"
+${File} "..\..\sheets\SISSI\" "info.xpm"
+${File} "..\..\sheets\SISSI\" "information.png"
+${File} "..\..\sheets\SISSI\" "key.png"
+${File} "..\..\sheets\SISSI\" "laptop.png"
+${File} "..\..\sheets\SISSI\" "lecteur_badge.png"
+${File} "..\..\sheets\SISSI\" "lecteur_badge_clavier.png"
+${File} "..\..\sheets\SISSI\" "lecteur_biometrique.png"
+${File} "..\..\sheets\SISSI\" "logiciel.xpm"
+${File} "..\..\sheets\SISSI\" "menace.xpm"
+${File} "..\..\sheets\SISSI\" "meuble.xpm"
+${File} "..\..\sheets\SISSI\" "modem.png"
+${File} "..\..\sheets\SISSI\" "onduleur.png"
+${File} "..\..\sheets\SISSI\" "ordinateur_portable.gif"
+${File} "..\..\sheets\SISSI\" "pc.png"
+${File} "..\..\sheets\SISSI\" "pda.png"
+${File} "..\..\sheets\SISSI\" "personne.xpm"
+${File} "..\..\sheets\SISSI\" "phone.png"
+${File} "..\..\sheets\SISSI\" "pompe.png"
+${File} "..\..\sheets\SISSI\" "pompe_rotative.png"
+${File} "..\..\sheets\SISSI\" "porte_tambour.png"
+${File} "..\..\sheets\SISSI\" "relational_database.png"
+${File} "..\..\sheets\SISSI\" "router.png"
+${File} "..\..\sheets\SISSI\" "safe.png"
+${File} "..\..\sheets\SISSI\" "sauvegarde.xpm"
+${File} "..\..\sheets\SISSI\" "si.xpm"
+${File} "..\..\sheets\SISSI\" "SISSI_object.xpm"
+${File} "..\..\sheets\SISSI\" "storage_array.png"
+${File} "..\..\sheets\SISSI\" "support.xpm"
+${File} "..\..\sheets\SISSI\" "tourniquet.png"
+${File} "..\..\sheets\SISSI\" "unbroken-chain.xpm"
+${File} "..\..\sheets\SISSI\" "ventilateur.png"
+${File} "..\..\sheets\SISSI\" "ventilateur_axial.png"
+${File} "..\..\sheets\SISSI\" "ventilateur_centrifuge.png"
 ${SetOutPath} "$INSTDIR\sheets\UML"
 ${File} "..\..\sheets\UML\" "aggregation.png"
 ${File} "..\..\sheets\UML\" "aggregation.xpm"
@@ -2219,9 +2353,11 @@ ${File} "..\..\plug-ins\xslt\" "dia-uml2python.xsl"
 ${File} "..\..\plug-ins\xslt\" "stylesheets.xml"
 
 ${SetOutPath} "$INSTDIR\ui"
-${File} "..\..\data\" "toolbox-ui.xml"
 ${File} "..\..\data\" "display-ui.xml"
+${File} "..\..\data\" "integrated-ui.xml"
 ${File} "..\..\data\" "popup-ui.xml"
+${File} "..\..\data\" "toolbar-ui.xml"
+${File} "..\..\data\" "toolbox-ui.xml"
 
 !ifdef DIA_INCLUDE_GTK
 ${SetOutPath} "$INSTDIR\bin"
