@@ -1,3 +1,10 @@
+2007-06-10  Steffen Macke <sdteffen@gmail.com>
+
+	* installer/win32/dia.nsi: Added SISSI files, ui files
+	* app/app_procs.c: #include commands.h
+	* app/commands.c: #include interface.h
+	* app/interface.c: Declare variables first to make MSVC happy
+	
 2007-06-07  Lars Clausen  <lars@raeder.dk>
 
 	* app/commands.c
